<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>Onliner</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Onliner</name>
    <description>Test Automation Framework for Onliner.by</description>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>

        <selenium.version>4.0.0</selenium.version>
        <testng.version>7.4.0</testng.version>
        <webdrivermanager.version>5.0.3</webdrivermanager.version>
        <log4j.version>2.14.1</log4j.version>
        <aspectj.version>1.8.10</aspectj.version>
        <slf4j-log4j12.version>1.7.32</slf4j-log4j12.version>
        <javafaker.version>1.0.2</javafaker.version>
        <surefire.version>2.20</surefire.version>
        <surefire-testng.version>2.12.4 </surefire-testng.version>
        <maven-compiler.version>3.8.1</maven-compiler.version>
        <awaitility.version>3.0.0</awaitility.version>

        <cart>src/test/resources/cart.xml</cart>
        <filter>src/test/resources/filter.xml</filter>
        <login.group>src/test/resources/loginGroup.xml</login.group>
        <redirection>src/test/resources/redirection.xml</redirection>
        <search>src/test/resources/search.xml</search>
        <suiteNegative>src/test/resources/suiteNegative.xml</suiteNegative>
        <suitePositive>src/test/resources/suitePositive.xml</suitePositive>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j-log4j12.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>${javafaker.version}</version>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>${awaitility.version}</version>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility-proxy</artifactId>
            <version>${awaitility.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                        -Dcucumber.options="--plugin io.qameta.allure.cucumber4jvm.AllureCucumber4Jvm"
                    </argLine>
                    <parallel>classes</parallel>
                    <threadCount>2</threadCount>
                    <suiteXmlFiles>
                        <suiteXmlFile>${cart}</suiteXmlFile>
                        <suiteXmlFile>${filter}</suiteXmlFile>
                        <suiteXmlFile>${login.group}</suiteXmlFile>
                        <suiteXmlFile>${redirection}</suiteXmlFile>
                        <suiteXmlFile>${search}</suiteXmlFile>
                        <suiteXmlFile>${suiteNegative}</suiteXmlFile>
                        <suiteXmlFile>${suitePositive}</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-testng</artifactId>
                        <version>${surefire-testng.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
